css overflow fix

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -349,7 +349,8 @@ button {
 
   html,
   body {
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   footer {
